src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_MANAGEMENT_REMARKS__c</fullName>
        <label>ACCOUNT MANAGEMENT REMARKS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_MANAGEMENT_STATUS__c</fullName>
        <label>ACCOUNT MANAGEMENT STATUS</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement Soft Copy Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC for Registration Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attempted_By__c</fullName>
        <label>Attempted By</label>
        <picklist>
            <picklistValues>
                <fullName>test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BANKING_REMARKS__c</fullName>
        <label>BANKING REMARKS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BANKING_STATUS__c</fullName>
        <label>BANKING STATUS</label>
        <picklist>
            <picklistValues>
                <fullName>Documents Collection WIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Application Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadblock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L1__c</fullName>
        <label>L1</label>
        <picklist>
            <picklistValues>
                <fullName>SDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updation of info on systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possessions Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vol - Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Due to Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Related</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L2__c</fullName>
        <label>L2</label>
        <picklist>
            <controllingField>L1__c</controllingField>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>customer not contactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Provided Challan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Original/Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs more time to confirm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>needs status of construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDL Sent Payment Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% CV received site visit pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site visit done-readiness pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readiness received handover pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Society Handover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Process/ Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Process/Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment made - not received yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit Confirmed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L3__c</fullName>
        <label>L3</label>
        <picklist>
            <controllingField>L2__c</controllingField>
            <picklistValues>
                <fullName>PTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>disputing agreement clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wants to read draft agrement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>customer stalling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to be initated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDS receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone number updation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date of visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already made investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not have funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>offering not good enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not have the budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>date field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Timelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed Possession Query</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PTP_Amount__c</fullName>
        <label>PTP Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTP_Date__c</fullName>
        <label>PTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Possession_Scheduled_Re_scheduled_Date__c</fullName>
        <label>Possession Scheduled/Re-scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RECOVERY_REMARKS__c</fullName>
        <label>RECOVERY REMARKS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RECOVERY_STATUS__c</fullName>
        <label>RECOVERY STATUS</label>
        <picklist>
            <picklistValues>
                <fullName>Booking &amp; Other Costs Recd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latest Demand Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Dues Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadblock</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Outcome__c</fullName>
        <label>Reason (For Outcome)</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy/Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Unsatisfied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>default_case_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>default case queue</label>
        <queue>default_case_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>email_to_case_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>email to case queue</label>
        <queue>email_to_case_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Call_back_requested_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L3__c) = &quot;Call back requested&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_requested_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L3__c) = &quot;Email requested&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Proposed_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L2__c) = &quot;Meeting Proposed&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_fixed_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L2__c) = &quot;Meeting fixed&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Needs_some_more_time_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L3__c) = &quot;Needs some more time&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTP_Date_and_PTP_Amount_mndatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( L3__c , &apos;PTP&apos;), ISNULL( PTP_Amount__c), ISBLANK(PTP_Amount__c), ISBLANK( PTP_Date__c), ISNULL(PTP_Date__c))</errorConditionFormula>
        <errorMessage>Please Enter PTP Amount and PTP Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Date_And_Payment_Amount_mndatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL( L3__c , &apos;Cheque dropped at site&apos;),
ISPICKVAL( L3__c , &apos;Online payment not reflecting&apos;),
ISPICKVAL( L3__c , &apos;Handed over to channel partner&apos;),
ISPICKVAL( L3__c , &apos;In Transit-Courier&apos;),
ISPICKVAL( L3__c , &apos;Client will pay by self&apos;),
ISPICKVAL( L3__c , &apos;Payment will come from bank&apos;),
ISPICKVAL( L3__c , &apos;PTP&apos;),
ISPICKVAL( L3__c , &apos;Pick up to be arranged&apos;)),
 ISNULL( Amount__c ),  ISBLANK(Amount__c ),
 ISBLANK( Date__c), ISNULL(Date__c) )</errorConditionFormula>
        <errorMessage>Please Enter Amount And  Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Possession_Scheduled_Date_mndatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(L3__c , &apos;Possession Scheduled/Re-scheduled&apos;) , ISNULL( Date__c ), ISBLANK(Date__c))</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDR_L3_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND( 
TEXT( L1__c) = &quot;SDR&quot;, 
TEXT( L2__c) = &quot;customer not contactable&quot;, 
ISPICKVAL(L3__c, &apos;&apos;)), True, False 
)</errorConditionFormula>
        <errorMessage>Please enter L3 value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tele_meeting_fixed_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L2__c) = &quot;Tele meeting fixed&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Confirmed_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L2__c) = &quot;Visit Confirmed&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Proposed_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
TEXT( L2__c) = &quot;Visit Proposed&quot;,
ISBLANK(Date__c)), True, False
)</errorConditionFormula>
        <errorMessage>Enter Date value</errorMessage>
    </validationRules>
</CustomObject>